# PhoenixGo

./: .gitignore  CMakeLists.txt  cmake.sh  make.sh  run.sh
common/: CMakeLists.txt  go_comm.cc  go_state.h
yao/: CMakeLists.txt
yao/win/: main.cpp  resource.h  yw.rc
yao/win/controls/: window.cpp  window.h
